# strojnoucenje111

./: Dockerfile  New Text Document.txt  requirements.txt  test.py
.dvc/: config
.github/workflows/: deploy  deploy.yml  docker-image.yml  production_testing.yml  ucenje.yml
Docker/Naloga01/: api.py  requirements.txt
StrojnoUcenje2-master/: pyproject.toml
StrojnoUcenje2-master/.github/workflows/: docker-image.yml
StrojnoUcenje2-master/Docker/Naloga01/: Dockerfile
StrojnoUcenje2-master/data/processed/: GOSPOSVETSKA C - TURNERJEVA UL.csv  dvorana_tabor.csv  europark_-_pobreška_c..csv  gosposvetska_c._-_turnerjeva_ul..csv  jhmb_–_dvoetažni_most.csv  lidl_-_koroška_c..csv  mladinska_ul._-_trubarjeva_ul..csv  mlinska_ul_._-_avtobusna_postaja.csv  na_poljanah_-_heroja_šercerja.csv  partizanska_c._-_cankarjeva_ul..csv  razlagova_ul._-_občina.csv  strossmayerjeva_ul._-_tržnica.csv  telemach_-_glavni_trg_-_stari_peron.csv  ulica_moše_pijada_-_ukc.csv  um_fgpa_-_lent_-_sodni_stolp.csv  vzajemna,_varuh_zdravja_-_betnavska_c..csv
StrojnoUcenje2-master/data/raw/: api_data.json
StrojnoUcenje2-master/notebooks/Naloga01-IIS/: fetch_data.py  pre_process.py  requirements.txt  shrani_za_postajo.py  test.py  vreme.py
StrojnoUcenje2-master/notebooks/SpletniVmesnik/: html.html
data/processed/: .gitignore  current_data.csv  (+21 more)
gx/: great_expectations.yml
models/: naloga01_scalerTest3.pkl  naloga01_scalerTest4.pkl  naloga04_scalerTest3.pkl  scaler_pipeline1.pkl  scaler_pipeline2.pkl
reports/: metrics.txt  prediction_errors.csv  prediction_metrics.csv  train_metrics.txt
(+58 files in other folders)
